compilers/ID/cool/regression/BASE_cgtest/old_cool/plus_incorrect.cl.stderr
./BASE_cgtest/plus_incorrect.cl:2: non-Int arguments: Int + Bool
Compilation halted due to static semantic errors.
