compilers/ID/cool/regression/BASE_cgtest/old_cool/plus_incorrect.cl
class Main is
   main(): Int is 1 + true end;
end;
